5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1716_2497.log
== TEST (2019-05-12 22:00:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo - juros
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:01:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (saldo>1):
	rend = saldo - juros
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:01:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (saldo>1):
	rend = saldo + juros
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:02:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (saldo>1):
	rend = saldo + juros
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:03:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (saldo>1):
	rend = saldo + juros
	saldo = saldo + rend
	t = t+tempo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:03:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (saldo>1):
	rend = saldo + juros
	saldo = saldo + rend
	t = t+tempo

print(round(rend,2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:04:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(saldo>1):
	rend = saldo + juros
	saldo = saldo + rend
	t = t+tempo

	print(round(rend,2)) # Exibicao de resultados

	

-- OUTPUT:
575.29
1150.58
2301.16
4602.32
9204.64
18409.28
36818.56
73637.12
147274.24
294548.48
589096.96
1178193.92
2356387.84
4712775.68
9425551.36
18851102.72
37702205.44
75404410.88
150808821.76
301617643.52
603235287.04
1206470574.08
2412941148.16
4825882296.32
9651764592.64
19303529185.28
38607058370.56
77214116741.12
154428233482.24
308856466964.48
617712933928.96
1235425867857.92
2470851735715.84
4941703471431.68
9883406942863.36
19766813885726.72
39533627771453.44
79067255542906.89
158134511085813.78
316269022171627.56
632538044343255.0
1265076088686510.0
2530152177373020.0
5060304354746040.0
1.012060870949208e+16
2.024121741898416e+16
4.048243483796832e+16
8.096486967593664e+16
1.6192973935187328e+17
3.2385947870374656e+17
6.477189574074931e+17
1.2954379148149862e+18
2.5908758296299725e+18
5.181751659259945e+18
1.036350331851989e+19
2.072700663703978e+19
4.145401327407956e+19
8.290802654815912e+19
1.6581605309631824e+20
3.316321061926365e+20
6.63264212385273e+20
1.326528424770546e+21
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:32:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(saldo>1):
	rend = saldo + juros
	saldo = saldo + rend
	t = t+tempo

	print(round(rend,2)) # Exibicao de resultados

	

-- OUTPUT:
575.29
1150.58
2301.16
4602.32
9204.64
18409.28
36818.56
73637.12
147274.24
294548.48
589096.96
1178193.92
2356387.84
4712775.68
9425551.36
18851102.72
37702205.44
75404410.88
150808821.76
301617643.52
603235287.04
1206470574.08
2412941148.16
4825882296.32
9651764592.64
19303529185.28
38607058370.56
77214116741.12
154428233482.24
308856466964.48
617712933928.96
1235425867857.92
2470851735715.84
4941703471431.68
9883406942863.36
19766813885726.72
39533627771453.44
79067255542906.89
158134511085813.78
316269022171627.56
632538044343255.0
1265076088686510.0
2530152177373020.0
5060304354746040.0
1.012060870949208e+16
2.024121741898416e+16
4.048243483796832e+16
8.096486967593664e+16
1.6192973935187328e+17
3.2385947870374656e+17
6.477189574074931e+17
1.2954379148149862e+18
2.5908758296299725e+18
5.181751659259945e+18
1.036350331851989e+19
2.072700663703978e+19
4.145401327407956e+19
8.290802654815912e+19
1.6581605309631824e+20
3.316321061926365e+20
6.63264212385273e+20
1.326528424770546e+21
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:34:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(saldo>1):
	rend = saldo + juros
	saldo = saldo + rend
	t = t+tempo

print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
575.29
1150.58
2301.16
4602.32
9204.64
18409.28
36818.56
73637.12
147274.24
294548.48
589096.96
1178193.92
2356387.84
4712775.68
9425551.36
18851102.72
37702205.44
75404410.88
150808821.76
301617643.52
603235287.04
1206470574.08
2412941148.16
4825882296.32
9651764592.64
19303529185.28
38607058370.56
77214116741.12
154428233482.24
308856466964.48
617712933928.96
1235425867857.92
2470851735715.84
4941703471431.68
9883406942863.36
19766813885726.72
39533627771453.44
79067255542906.89
158134511085813.78
316269022171627.56
632538044343255.0
1265076088686510.0
2530152177373020.0
5060304354746040.0
1.012060870949208e+16
2.024121741898416e+16
4.048243483796832e+16
8.096486967593664e+16
1.6192973935187328e+17
3.2385947870374656e+17
6.477189574074931e+17
1.2954379148149862e+18
2.5908758296299725e+18
5.181751659259945e+18
1.036350331851989e+19
2.072700663703978e+19
4.145401327407956e+19
8.290802654815912e+19
1.6581605309631824e+20
3.316321061926365e+20
6.63264212385273e+20
1.326528424770546e+21
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:36:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(saldo>1):
	rend = saldo + juros
	saldo = saldo + rend
	t = t+tempo

	print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
1150.54
2301.12
4602.28
9204.6
18409.24
36818.52
73637.08
147274.2
294548.44
589096.92
1178193.88
2356387.8
4712775.64
9425551.32
18851102.68
37702205.4
75404410.84
150808821.72
301617643.48
603235287.0
1206470574.04
2412941148.12
4825882296.28
9651764592.6
19303529185.24
38607058370.52
77214116741.08
154428233482.2
308856466964.44
617712933928.92
1235425867857.88
2470851735715.8
4941703471431.64
9883406942863.32
19766813885726.68
39533627771453.4
79067255542906.84
158134511085813.75
316269022171627.5
632538044343255.0
1265076088686510.0
2530152177373020.0
5060304354746040.0
1.012060870949208e+16
2.024121741898416e+16
4.048243483796832e+16
8.096486967593664e+16
1.6192973935187328e+17
3.2385947870374656e+17
6.477189574074931e+17
1.2954379148149862e+18
2.5908758296299725e+18
5.181751659259945e+18
1.036350331851989e+19
2.072700663703978e+19
4.145401327407956e+19
8.290802654815912e+19
1.6581605309631824e+20
3.316321061926365e+20
6.63264212385273e+20
1.326528424770546e+21
2.653056849541092e
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:38:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(saldo>1):
	rend = qi *  juros
	saldo = saldo + rend
	t = t+tempo

	print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
621.27
644.28
667.29
690.3
713.31
736.32
759.33
782.34
805.35
828.36
851.37
874.38
897.39
920.4
943.41
966.42
989.43
1012.44
1035.45
1058.46
1081.47
1104.48
1127.49
1150.5
1173.51
1196.52
1219.53
1242.54
1265.55
1288.56
1311.57
1334.58
1357.59
1380.6
1403.61
1426.62
1449.63
1472.64
1495.65
1518.66
1541.67
1564.68
1587.69
1610.7
1633.71
1656.72
1679.73
1702.74
1725.75
1748.76
1771.77
1794.78
1817.79
1840.8
1863.81
1886.82
1909.83
1932.84
1955.85
1978.86
2001.87
2024.88
2047.89
2070.9
2093.91
2116.92
2139.93
2162.94
2185.95
2208.96
2231.97
2254.98
2277.99
2301.0
2324.01
2347.02
2370.03
2393.04
2416.05
2439.06
2462.07
2485.08
2508.09
2531.1
2554.11
2577.12
2600.13
2623.14
2646.15
2669.16
2692.17
2715.18
2738.19
2761.2
2784.21
2807.22
2830.23
2853.24
2876.25
2899.26
2922.27
2945.28
2968.29
2991.3
3014.31
3037.32
3060.33
3083.34
3106.35
3129.36
3152.37
3175.38
3198.39
3221.4
3244.41
3267.42
3290.43
3313.44
3336.45
3359.46
3382.47
3405.48
3428.49
3451.5
3474.51
3497.52
3520.53
3543.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:39:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<tempo):
	rend = qi *  juros
	saldo = saldo + rend
	t = t+tempo

	print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:39:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t>tempo):
	rend = qi *  juros
	saldo = saldo + rend
	t = t+tempo

	print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:39:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t>tempo):
	rend = qi *  juros
	saldo = saldo + rend
	t = t+tempo
print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:39:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<tempo):
	rend = qi *  juros
	saldo = saldo + rend
	t = t+tempo
print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 11:39:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<tempo):
	rend = qi *  juros
	saldo = saldo + rend
	t = t+tempo
print(round(saldo,2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.142019
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:40:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<tempo):
	rend = qi *  juros
	saldo = saldo + rend
	t = t+1
print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
713.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:40:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<tempo):
	rend = qi *  juros
	saldo = saldo + rend
	t = t+1
	print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
621.27
644.28
667.29
690.3
713.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 11:40:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<tempo):
	rend = qi *  juros
	saldo = saldo + rend
	t = t+1
	print(round(saldo,2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.157004
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
621.27
644.28
667.29
690.3
713.31
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
891.43
924.45
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1377.7
1428.73
1479.75
1530.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:40:48) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<tempo):
	rend = qi *  juros
	saldo = saldo + rend
	t = t+1
	print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
621.27
644.28
667.29
690.3
713.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:41:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<tempo):
	rend = qi *  (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
621.27
644.28
667.29
690.3
713.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:41:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<tempo):
	rend = saldo *  (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo,2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 11:41:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<tempo):
	rend = saldo *  (juros/100)
	saldo = saldo + rend
	t = t+1
	print(round(saldo,2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.155455
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
